--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -6,6 +6,7 @@
     <li><a href='https://webpack.github.io/'>Webpack</a> for building and bundling client-side resources</li>
     <li><a href='http://getbootstrap.com/'>Bootstrap</a> for layout and styling</li>
 </ul>
+<p>Hejka</p>
 <p>To help you get started, we've also set up:</p>
 <ul>
     <li><strong>Client-side navigation</strong>. For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
