--- a/ClientApp/app/components/vehicle-list/vehicle-list.component.html
+++ b/ClientApp/app/components/vehicle-list/vehicle-list.component.html
@@ -1,13 +1,15 @@
 <h2>Vehicles</h2>
-<p>
-  <a [routerLink]="['/vehicles/new/']" class="btn btn-primary">New Vehicle</a>
-</p>
-<div class="form-group well">
+<div class="well">
+ <div class="form-group">
   <label for="make">Make</label>
   <select id="make" class="form-control" [(ngModel)]="filter.makeId" (change)="onFilterChange()">
     <option value=""></option>
     <option *ngFor="let m of makes" value="{{ m.id }}">{{ m.name}}</option>
-  </select></div>
+  </select>
+ </div>
+ <button class="btn btn-default" (click)="resetFilter()">Reset filters</button>
+</div>
+
 <table class="table">
   <thead>
     <tr>
@@ -28,3 +30,6 @@
     </tr>
   </tbody>
 </table>
+<p>
+    <a [routerLink]="['/vehicles/new/']" class="btn btn-primary">New Vehicle</a>
+</p>
