--- a/ClientApp/app/components/vehicle-list/vehicle-list.component.html
+++ b/ClientApp/app/components/vehicle-list/vehicle-list.component.html
@@ -37,6 +37,7 @@
     </tr>
   </tbody>
 </table>
+<pagination [total-items]="10" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>
 <p>
     <a [routerLink]="['/vehicles/new/']" class="btn btn-primary">New Vehicle</a>
 </p>
