--- a/ClientApp/app/components/vehicle-list/vehicle-list.component.html
+++ b/ClientApp/app/components/vehicle-list/vehicle-list.component.html
@@ -28,7 +28,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let v of vehicles">
+    <tr *ngFor="let v of queryResult.items">
       <td>{{ v.id }}</td>
       <td>{{ v.make.name }}</td>
       <td>{{ v.model.name}}</td>
@@ -37,7 +37,7 @@
     </tr>
   </tbody>
 </table>
-<pagination [total-items]="10" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>
+<pagination [total-items]="queryResult.totalItems" [page-size]="query.pageSize" (page-changed)="onPageChange($event)"></pagination>
 <p>
     <a [routerLink]="['/vehicles/new/']" class="btn btn-primary">New Vehicle</a>
 </p>
